# quick_metric

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: ci.yml  docs.yml
api_reference/: index.html
api_reference/apply_methods/: index.html
api_reference/core/: index.html
api_reference/exceptions/: index.html
api_reference/filter/: index.html
api_reference/method_definitions/: index.html
api_reference/output_formats/: index.html
api_reference/pipeline/: index.html
config/: example.yaml
configuration/: index.html
contributing/: index.html
docs/: README.md  mkdocs.yml
docs/content/: configuration.md  contributing.md  getting_started.md  index.md  pipeline_integration.md
docs/content/api_reference/: apply_methods.md  core.md  exceptions.md  filter.md  index.md  interpret_instructions.md  method_definitions.md  output_formats.md  pipeline.md
docs/content/usage/: dataframe.md  flat_dataframe.md  index.md  nested.md  records.md
docs/docs/: index.md
docs/overrides/partials/: footer.html  header.html
getting_started/: index.html
pipeline_integration/: index.html
quick_metric/: __init__.py  _apply_methods.py  _config.py  _core.py  _filter.py  _method_definitions.py  _output_formats.py  _split.py  apply_methods.py  core.py  exceptions.py  filter.py  interpret_instructions.py  method_definitions.py  pipeline.py  registry.py  results.py  store.py
quick_metric/charts/: __init__.py  core.py  definitions.py  excel_renderer.py  seaborn_renderer.py  store_integration.py
search/: search_index.json
stylesheets/: nhs_style.css
tests/: __init__.py  conftest.py  test_data.py
tests/e2e/: test_metrics_store_performance.py  test_split_performance.py  test_workflows.py
tests/unit/: test_apply_methods.py  test_core.py  test_exceptions.py  test_filter_conditions.py  test_method_definitions.py  test_metrics_store.py  test_output_formats.py  test_output_methods.py  test_pipeline.py  test_recursive_filter.py  test_registry.py  test_results.py  test_split.py
tests/unit/test_filter/: test_conditions.py  test_recursive_filter.py
tests/unit/test_results/: __init__.py  test_create_result.py  test_result_outputs.py  test_result_types.py
tests/unit/test_store/: test_store.py  test_store_outputs.py
usage/: index.html
usage/dataframe/: index.html
usage/flat_dataframe/: index.html
usage/nested/: index.html
usage/records/: index.html
